# ctypes_examples

./: CMakeLists.txt  README.md  add_seven.cpp  add_seven.h  array_recasting.cpp  array_recasting.h  array_seven.cpp  array_seven.h  int_seven.cpp  int_seven.h  main.cpp  struct_tests.py
include/: add_seven.h  array_recasting.h  int_seven.h
notebooks/: array_recasting.ipynb  array_seven.ipynb  int_seven.ipynb
src/: add_seven.cpp  array_recasting.cpp  array_seven.cpp  int_seven.cpp
